@@ -213,6 +213,14 @@ $batch = $minion->backend->list_jobs(0, 10, {task => 'add'});
 is $batch->[0]{task},    'add', 'right task';
 is $batch->[0]{retries}, 0,     'job has not been retried';
 ok !$batch->[1], 'no more results';
+$batch = $minion->backend->list_jobs(0, 10, {queue => 'default'});
+is $batch->[0]{queue}, 'default', 'right queue';
+is $batch->[1]{queue}, 'default', 'right queue';
+is $batch->[2]{queue}, 'default', 'right queue';
+is $batch->[3]{queue}, 'default', 'right queue';
+ok !$batch->[4], 'no more results';
+$batch = $minion->backend->list_jobs(0, 10, {queue => 'does_not_exist'});
+is_deeply $batch, [], 'no results';
 $batch = $minion->backend->list_jobs(0, 1);
 is $batch->[0]{state},   'inactive', 'right state';
 is $batch->[0]{retries}, 0,          'job has not been retried';
